2000-01-11  Jacob Berkman  <jacob@helixcode.com>

	* gdk-pixbuf/pixops/Makefile.am (INCLUDES): added
	$LIBART_CFLAGS to $INCLUDES

2000-01-10  Elliot Lee  <sopwith@redhat.com>

	* configure.in, gdk-pixbuf/Makefile.am: Build a libcanvas_pixbuf.

	* configure.in: Define version macros. Generate gdk-pixbuf/gdk-pixbuf-features.h. Always INSIDE_GNOME.
	* gdk-pixbuf/Makefile.am: Add gdk-pixbuf-features.h
	* gdk-pixbuf/gdk-pixbuf.c: Add definitions of gdk-pixbuf-features.h declarations, plus some initialization stubs.

2000-01-05  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/pixops.c: Fixed src_channels/dest_channels
	confusion. (Again caught by Tomas Ogren's Purify)

2000-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-xform.c (gdk_pixbuf_rotate): comment out
	debugging printing.

	* gdk-pixbuf/gdk-pixbuf-io.c: Added progressive animation loading.
	* gdk-pixbuf/gdk-pixbuf-io.h: Added progressive animation loading.
	* gdk-pixbuf/gdk-pixbuf-loader.c: Added progressive animation
	loading.
	* gdk-pixbuf/gdk-pixbuf-loader.h: Added progressive animation
	loading.
	* gdk-pixbuf/io-gif.c (image_load_increment): I think the
	ref-counting mess is finally fixed.  Added progressive animation
	loading. 
	(gif_get_lzw): remove memory_leak

	* doc/tmpl/gdk-pixbuf-loader.sgml: much longer long description
	added. 

2000-01-05  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/pixops.c (pixops_process): Fix computation of end of run indices.
	  
	* gdk-pixbuf/pixops/pixops.c: Fix double increments when dest_channels == 4.
	  (Pointed out by Tomas Ogren)

2000-01-05  Mark Crichton  <crichton@gimp.org>

	* gdk-pixbuf/gdk-pixbuf-loader.c (gdk_pixbuf_loader_eat_header_write): 
	Return 0 if gdk_pixbuf_load_loader_module returns FALSE.

2000-01-05 Elliot Lee <sopwith@redhat.com>
	* gdk-pixbuf/pixops/Makefile.am: Link with -lm (to get 'ceil' function)

2000-01-05  Owen Taylor  <otaylor@redhat.com>

	* doc/Makefile.am doc/gdk-pixbuf-sections.txt